Trying to fix hero size on iphone 11. Bottom btn not loading

--- a/NM2/src/index.css
+++ b/NM2/src/index.css
@@ -2146,7 +2146,7 @@ a:nth-child(2) {
   }
 
   .hero {
-    height: 110vh;
+    height: 130vh;
     padding-bottom: 40rem;
   }
 
